--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A bar menu for SkullSpace events" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link
-            rel="stylesheet"
-            id="x-google-fonts-css"
-            href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C700%2C700italic%2C600%7CDoppio+One%3A400%7CPrata%3A400&#038;subset=latin%2Clatin-ext&#038;ver=5.2.5"
-            type="text/css"
-            media="all"
-        />
-        <title>SkullSpace Bar Menu</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="description" content="A bar menu for SkullSpace events" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" id="x-google-fonts-css"
+        href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C700%2C700italic%2C600%7CDoppio+One%3A400%7CPrata%3A400&#038;subset=latin%2Clatin-ext&#038;ver=5.2.5"
+        type="text/css" media="all" />
+    <title>SkullSpace Bar Menu</title>
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+
 </html>
