--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A bar menu for SkullSpace events" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" id="x-google-fonts-css"
-        href="//fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C700%2C700italic%2C600%7CDoppio+One%3A400%7CPrata%3A400&#038;subset=latin%2Clatin-ext&#038;ver=5.2.5"
+        href="https://fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C700%2C700italic%2C600%7CDoppio+One%3A400%7CPrata%3A400&subset=latin%2Clatin-ext&ver=5.2.5"
         type="text/css" media="all" />
     <title>SkullSpace Bar Menu</title>
 </head>
